<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_40"
            android:textSize="@dimen/_24"
            android:text="@string/otp_heading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10"
            android:textSize="@dimen/_16"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20"
            android:layout_marginLeft="@dimen/_20"
            android:text="@string/otp_subheading"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/_70"
            android:layout_gravity="center"
            android:orientation="vertical">



        <ImageView
            android:id="@+id/SignInPageLogo"
            android:layout_width="@dimen/_150"
            android:layout_height="@dimen/_150"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/_40"
            android:src="@drawable/for_splash"
            android:visibility="gone" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_40"
            android:layout_marginLeft="@dimen/_40"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerSelectCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinnerlayer"
                android:paddingLeft="@dimen/_10"
                android:prompt="@string/otp_spinner_country"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20"
                android:layout_marginTop="@dimen/_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edtZipCode"
                    android:layout_width="@dimen/_20"
                    android:layout_height="match_parent"
                    android:layout_weight="34"
                    android:background="@drawable/edittextlayer"
                    android:clickable="false"
                    android:ellipsize="start"
                    android:gravity="center|left"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_10"
                    android:singleLine="true"
                    android:hint="+000"
                    android:textColorHint="@color/colorHeighLight"
                    android:textSize="@dimen/_20"
                    tools:ignore="EllipsizeMaxLines" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />


                <EditText
                    android:id="@+id/edtPhNo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="64"
                    android:background="@drawable/edittextlayer"
                    android:ellipsize="end"
                    android:hint="@string/otp_mobile_no_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_10"
                    android:singleLine="true"
                    android:textColorHint="@color/colorHeighLight" />

            </LinearLayout>

            <Button
                android:id="@+id/btnGetOtp"
                android:layout_marginTop="@dimen/_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstateslayer2_with_border"
                android:onClick="btnGetOtp"
                android:text="@string/get_otp"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_90"
            android:visibility="gone" />


    </LinearLayout>
    </LinearLayout>
</ScrollView>